# catalyst-engine

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  live.yml
config/: scoring.yaml  universe.yaml
data/processed/: catalyst.duckdb
docs/: data_dictionary.md  decisions_log.md  index.html  methodology.md
live_log/: calls.csv
live_log/postmortems/: 2026-05-27-CRM.md  2026-05-27-SNOW.md  2026-05-28-COST.md  2026-05-28-NTAP.md  2026-05-28-S.md  2026-06-02-DG.md  2026-06-02-PANW.md  2026-06-03-AVGO.md  2026-06-03-LULU.md  2026-06-10-RH.md  2026-06-24-MU.md  2026-06-30-STZ.md  2026-07-10-UNH.md  2026-07-13-FAST.md  2026-07-13-JBHT.md  2026-07-14-JNJ.md  2026-07-15-ABT.md  2026-07-15-GE.md  2026-07-15-PEP.md  2026-07-15-SNA.md  2026-07-16-GE.md  2026-07-16-HRI.md  2026-07-16-MMM.md  2026-07-16-SNA.md  2026-07-16-UNH.md
src/catalyst_engine/: __init__.py  cli.py  config.py
src/catalyst_engine/backtest/: __init__.py  metrics.py  replay.py
src/catalyst_engine/catalysts/: __init__.py
src/catalyst_engine/data/: __init__.py  earnings.py  earnings_from_edgar.py  earnings_quality.py  edgar.py  insider_bulk.py  prices.py  short_interest.py  universe.py
src/catalyst_engine/db/: __init__.py  connection.py  schema.sql
src/catalyst_engine/features/: __init__.py  insider.py  positioning.py  realized_moves.py
src/catalyst_engine/live/: __init__.py
src/catalyst_engine/output/: __init__.py
src/catalyst_engine/scoring/: __init__.py  scorer.py
src/catalyst_engine/utils/: __init__.py  logging.py  pit.py
tests/: conftest.py  test_earnings.py  test_earnings_quality.py  test_edgar.py  test_insider.py  test_insider_bulk.py  test_live.py  test_metrics.py  test_pit.py  test_positioning.py  test_prices.py  test_realized_moves.py  test_replay.py  test_scorer.py  test_short_interest.py  test_universe.py
