[project]
name = "catalyst_engine"
version = "0.1.0"
description = "Single-name event and catalyst tracking system for discretionary equity desks"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Raj Pawar" }]
license = { text = "Proprietary" }

dependencies = [
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.40",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.3",
    "matplotlib>=3.8.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.32.0", "plotly>=5.19.0"]
pdf = ["weasyprint>=61.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "freezegun>=1.4.0",
    "ruff>=0.4.0",
    "black>=24.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "types-pyyaml",
    "types-requests",
]

[project.scripts]
catalyst = "catalyst_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalyst_engine"]

# ----- ruff -----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow asserts in tests

# ----- black -----
[tool.black]
line-length = 100
target-version = ["py311"]

# ----- mypy -----
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "duckdb.*"]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "src/catalyst_engine/cli.py",
]

# ----- pytest -----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not integration",
    "--cov=catalyst_engine",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=60",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
    "pit: point-in-time correctness tests (must always pass)",
]
